Refactored code, added new endpoint, tested all endpoints

--- a/FoodFacilities.Application/FoodFacilities.Application.csproj
+++ b/FoodFacilities.Application/FoodFacilities.Application.csproj
@@ -15,4 +15,8 @@
     <ProjectReference Include="..\FoodFacilities.Domain\FoodFacilities.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Adapters\Driving\" />
+  </ItemGroup>
+
 </Project>
