Refactor de testes pra mockar o database

--- a/FoodFacilities.Test/FoodFacilities.Test.csproj
+++ b/FoodFacilities.Test/FoodFacilities.Test.csproj
@@ -29,4 +29,14 @@
     <ProjectReference Include="..\FoodFacilities.Domain\FoodFacilities.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Database\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="Database\MockDatabase.csv">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
